kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-judge-ingress
  # annotations:
  #   cert-manager.io/issuer: letsencrypt-nginx
spec:
  # tls:
  #   - hosts:
  #       - judge.arwa.bio
  #     secretName: letsencrypt-nginx
  rules:
    - host: judge.arwa.bio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: online-judge-service
                port:
                  number: 8000
  ingressClassName: nginx
